--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <h1>A Work Day Scheduler</h1>
       <h2>A simple calendar app for your busy schedule</h2>
       <h3 id="date-today">DATE</h3>
+      <div id="date-row"></div>
     </header>
     <section id="container">
 
