--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>AMT - A Moment In Time - Work Day Scheduler</title>
     <link rel="stylesheet" href="styles.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    
     <script src="moment.min.js"></script>
   </head>
   <body>
@@ -18,8 +17,7 @@
       <div id="date-row"></div>
     </header>
     <section id="container">
-
     </section>
-    <script src="script.js"></script>
+    <script src="script2.js"></script>
   </body>
 </html>
