--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     </header>
     <section id="container">
     </section>
+    <script src="config.js"></script>
     <script src="script2.js"></script>
   </body>
 </html>
