--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="moment.min.js"></script>
+    <script src="config.js"></script>
   </head>
   <body>
     <header>
@@ -18,7 +19,6 @@
     </header>
     <section id="container">
     </section>
-    <script src="config.js"></script>
-    <script src="script2.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
